k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website-container
        image: gorle19/s314781_site:v1.0
        ports:
        - containerPort: 80
